[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/entity/shadow.png" type="Texture" id=1]
[ext_resource path="res://scripts/entity/item/Item.gd" type="Script" id=2]
[ext_resource path="res://assets/GUI/dinamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/entity/item/red_apple.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.88473
height = 2.16938

[sub_resource type="Animation" id=2]
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Image:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.65, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -3.5 ), Vector2( 0, -3.5 ), Vector2( 0, 0 ) ]
}

[node name="Item" type="Area2D" groups=[
"entity",
"item",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3.8147e-06, -1.10243 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
next/idle = "idle"

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 0.5 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 1 )

[node name="Image" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Number" type="RichTextLabel" parent="Image"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 56.0
margin_bottom = 56.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/normal_font = ExtResource( 3 )
text = "1"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pickup timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Item_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Item_body_exited"]
[connection signal="timeout" from="Pickup timer" to="." method="_on_Pickup_timer_timeout"]
